--- a/Overdare/Overdare.csproj
+++ b/Overdare/Overdare.csproj
@@ -16,9 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Reference Include="UAssetAPI">
-	    <HintPath>..\..\UAssetAPI\UAssetAPI\bin\Release\net8.0\UAssetAPI.dll</HintPath>
-	  </Reference>
+	  <ProjectReference Include="..\..\UAssetAPI\UAssetAPI\UAssetAPI.csproj" />
 	</ItemGroup>
 
 </Project>
