--- a/Overdare/Overdare.csproj
+++ b/Overdare/Overdare.csproj
@@ -1,22 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
-
-	<ItemGroup>
-		<EmbeddedResource Include="Resources\**" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\UAssetAPI\UAssetAPI\UAssetAPI.csproj" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\UAssetAPI\UAssetAPI\UAssetAPI.csproj" />
+  </ItemGroup>
 </Project>
